--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 <body>
   <main>
-    <h1>Anstsii Umrv</h1> # Исправить ошибки в имени и фамилии
-    <h2>My first commit</h2> # Изменить на My second commit
+    <h1>Anastasiia. Umarova</h1> # Исправить ошибки в имени и фамилии
+    <h2>My second commit</h2> # Изменить на My second commit
     <h3>Congrat, nice code!</h3>
     asdfasdfsadfsadf
     3
